Added support for Charset